--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,6 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <dependencies>
-
-
-    </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -37,7 +32,24 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>install</goals>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+    <scm>
 
+        <url>https://github.com/haglazpl/sfg-pet-clinic.git</url>
+
+        <connection>scm:git:git@github.com:haglazpl/sfg-pet-clinic.git</connection>
+
+        <developerConnection>scm:git:git@github.com:haglazpl/sfg-pet-clinic.git</developerConnection>
+
+        <tag>sfg-spring-petclinic</tag>
+
+    </scm>
 </project>
