--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <start-class>guru.springframework.sfgpetclinic</start-class>
     </properties>
 
     <dependencies>
