--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <start-class>guru.springframework.sfgpetclinic</start-class>
     </properties>
 
     <dependencies>
@@ -34,6 +33,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
