--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,8 @@
     </build>
     <scm>
 
-        <developerConnection>scm:git:git@github.com:haglazpl/sfg-pet-clinic.git</developerConnection>
+        <developerConnection>scm:git:ssh://git@github.com/haglazpl/sfg-pet-clinic.git</developerConnection>
+        <connection>scm:git:ssh://git@github.com/haglazpl/sfg-pet-clinic.git</connection>
 
         <tag>HEAD</tag>
 
