--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,7 @@
         </plugins>
     </build>
     <scm>
-
-        <developerConnection>scm:git:ssh://git@github.com:haglazpl/sfg-pet-clinic.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:haglazpl/sfg-pet-clinic.git</developerConnection>
         <connection>scm:git:ssh://git@github.com:haglazpl/sfg-pet-clinic.git</connection>
 
         <tag>sfg-pet-clinic-0.0.5</tag>
