--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.5</version>
+    <version>0.0.5-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
     <description>Pet clinic application</description>
 
@@ -51,7 +51,7 @@
         <developerConnection>scm:git:git@github.com:haglazpl/sfg-pet-clinic.git</developerConnection>
         <connection>scm:git:ssh://git@github.com:haglazpl/sfg-pet-clinic.git</connection>
 
-        <tag>sfg-pet-clinic-0.0.5</tag>
+        <tag>sfg-pet-clinic-0.0.5-SNAPSHOT</tag>
 
     </scm>
 </project>
