--- a/pom.xml
+++ b/pom.xml
@@ -14,18 +14,13 @@
     </parent>
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.5</version>
+    <version>0.0.6-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
     <description>Pet clinic application</description>
 
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
-    <dependencies>
-
-
-    </dependencies>
 
     <build>
         <plugins>
@@ -51,7 +46,7 @@
         <developerConnection>scm:git:git@github.com:haglazpl/sfg-pet-clinic.git</developerConnection>
         <connection>scm:git:ssh://git@github.com:haglazpl/sfg-pet-clinic.git</connection>
 
-        <tag>sfg-pet-clinic-0.0.5</tag>
+        <tag>HEAD</tag>
 
     </scm>
 </project>
