--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.6</version>
+    <version>0.0.7-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
     <description>Pet clinic application</description>
 
@@ -46,7 +46,7 @@
         <developerConnection>scm:git:git@github.com:haglazpl/sfg-pet-clinic.git</developerConnection>
         <connection>scm:git:ssh://git@github.com:haglazpl/sfg-pet-clinic.git</connection>
 
-        <tag>sfg-pet-clinic-0.0.6</tag>
+        <tag>HEAD</tag>
 
     </scm>
 </project>
